--- a/home.html
+++ b/home.html
@@ -110,9 +110,9 @@ html,body{
       <iframe src="cards/card4.html"></iframe>
     </div>
 
-    <div class="card c2">
-      <div class="card-title">em produção</div>
-      <iframe src="cards/card.html"></iframe>
+    <div class="card c5">
+      <div class="card-title">🛒 Vendas PDV</div>
+      <iframe src="cards/card5.html"></iframe>
     </div>
 
     <div class="card c3">
