--- a/cards/card5.html
+++ b/cards/card5.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Vendas por Produto</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Vendas por Produto • Fiscal</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --primary:#00c2b8;
-  --bg:#f5fbfb;
+  --primary:#14b8a6;
+  --primary-dark:#0f766e;
   --card:#ffffff;
   --muted:#64748b;
 }
@@ -24,7 +24,7 @@ html,body{
   height:100%;
   background:var(--card);
   border-radius:22px;
-  padding:18px 20px;
+  padding:20px;
   box-shadow:0 18px 40px rgba(0,0,0,.08);
   display:flex;
   flex-direction:column;
@@ -34,36 +34,82 @@ html,body{
   font-size:15px;
 }
 .filters{
-  display:grid;
-  grid-template-columns:1fr 1fr 2fr;
-  gap:10px;
-  margin-top:12px;
+  margin-top:14px;
 }
-.filters input{
-  padding:8px;
-  border-radius:10px;
+.input-loading{ position:relative }
+.input-overlay{
+  position:absolute;
+  inset:0;
+  background:rgba(255,255,255,.7);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  border-radius:14px;
+}
+.spinner{
+  width:22px;height:22px;
+  border:3px solid #cbd5e1;
+  border-top-color:#2563eb;
+  border-radius:50%;
+  animation:spin .8s linear infinite;
+}
+@keyframes spin{to{transform:rotate(360deg)}}
+
+.lista .item{
+  background:#f1f5f9;
+  padding:12px;
+  border-radius:12px;
+  margin-top:6px;
+  cursor:pointer;
+}
+.lista .item:hover{background:#e2e8f0}
+
+.badge{
+  display:inline-block;
+  margin-top:10px;
+  padding:8px 14px;
+  border-radius:999px;
+  background:#e0f2fe;
+  font-weight:800;
+  font-size:12px;
+}
+
+.grid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:12px;
+  margin-top:14px;
+}
+.grid input{
+  padding:10px;
+  border-radius:12px;
   border:1px solid #cbd5e1;
   font-size:12px;
 }
+
 .kpi{
-  background:var(--bg);
-  border-radius:16px;
-  padding:14px;
-  margin-top:14px;
+  background:#f8fafc;
+  border-radius:18px;
+  padding:18px;
+  margin-top:18px;
+  text-align:center;
 }
 .kpi span{
-  font-size:12px;
+  display:block;
+  font-size:13px;
   color:var(--muted);
 }
 .kpi strong{
-  font-size:24px;
+  font-size:26px;
   font-weight:800;
 }
+
 .footer{
   margin-top:auto;
   font-size:12px;
   color:var(--muted);
 }
+.hidden{display:none}
 </style>
 </head>
 
@@ -71,54 +117,127 @@ html,body{
 
 <div class="card">
 
-  <div class="header">📊 Vendas por produto</div>
+  <div class="header">📊 Vendas por produto (Fiscal)</div>
 
-  <div class="filters">
+  <!-- BUSCA PRODUTO -->
+  <label>Produto</label>
+  <div class="input-loading">
+    <input id="buscaProduto" placeholder="Digite o nome do produto">
+    <div class="input-overlay" id="loadingProduto">
+      <div class="spinner"></div>
+    </div>
+  </div>
+  <div id="listaProduto" class="lista"></div>
+  <div id="produtoBadge" class="badge hidden"></div>
+
+  <!-- PERÍODO -->
+  <div class="grid">
     <input type="date" id="de">
     <input type="date" id="ate">
-    <input type="text" id="produto" placeholder="Produto ID (VF)">
   </div>
 
+  <!-- KPI -->
   <div class="kpi">
     <span>Quantidade vendida no período</span>
     <strong id="qtd">—</strong>
   </div>
 
   <div class="footer">
-    Fonte: Cupons Fiscais (Varejo Fácil)
+    Fonte: Cupons fiscais • Varejo Fácil
   </div>
 
 </div>
 
 <script>
-const de = document.getElementById("de");
-const ate = document.getElementById("ate");
-const produto = document.getElementById("produto");
+let produtoSelecionado = null;
+let debounce = null;
+let controller = null;
+const cache = {};
+
+const buscaProduto = document.getElementById("buscaProduto");
+const listaProduto = document.getElementById("listaProduto");
+const badge = document.getElementById("produtoBadge");
+const loading = document.getElementById("loadingProduto");
 const qtd = document.getElementById("qtd");
 
+const showLoading=()=>loading.style.display="flex";
+const hideLoading=()=>loading.style.display="none";
+
+/* DATAS PADRÃO */
 (function(){
-  const hoje = new Date();
-  de.value = new Date(hoje.getFullYear(), hoje.getMonth(), 1).toISOString().slice(0,10);
-  ate.value = hoje.toISOString().slice(0,10);
+  const hoje=new Date();
+  de.value=new Date(hoje.getFullYear(),hoje.getMonth(),1).toISOString().slice(0,10);
+  ate.value=hoje.toISOString().slice(0,10);
 })();
 
-async function consultar(){
-  if(!produto.value) return;
+/* BUSCA PRODUTO (IGUAL AO SEU PADRÃO) */
+buscaProduto.oninput=()=>{
+  clearTimeout(debounce);
+  const termo=buscaProduto.value.trim().toLowerCase();
+  produtoSelecionado=null;
+  badge.classList.add("hidden");
 
-  qtd.textContent = "…";
+  if(termo.length<2){
+    listaProduto.innerHTML="";
+    return;
+  }
 
-  const r = await fetch(
-    `/api/vendas-produto?produtoId=${produto.value}&de=${de.value}&ate=${ate.value}`
-  );
-  const j = await r.json();
+  debounce=setTimeout(async()=>{
+    if(cache[termo]){
+      renderLista(cache[termo]); return;
+    }
 
-  qtd.textContent = j.quantidadeVendida ?? 0;
+    if(controller) controller.abort();
+    controller=new AbortController();
+
+    try{
+      showLoading();
+      const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(termo)}`,{
+        signal:controller.signal
+      });
+      const j=await r.json();
+      cache[termo]=j.items||[];
+      renderLista(j.items||[]);
+    }catch(e){
+      if(e.name!=="AbortError")console.error(e);
+    }finally{
+      hideLoading();
+    }
+  },280);
+};
+
+function renderLista(items){
+  listaProduto.innerHTML=items.slice(0,10).map(p=>`
+    <div class="item" onclick="selecionarProduto(${p.id},'${p.descricao.replace(/'/g,"")}')">
+      ${p.descricao}
+    </div>
+  `).join("");
 }
 
-[de, ate, produto].forEach(el =>
-  el.addEventListener("change", consultar)
-);
-produto.addEventListener("keyup", consultar);
+window.selecionarProduto=(id,nome)=>{
+  produtoSelecionado={id,nome};
+  buscaProduto.value=nome;
+  badge.textContent=`${nome} • ID ${id}`;
+  badge.classList.remove("hidden");
+  listaProduto.innerHTML="";
+  consultar();
+};
+
+/* CONSULTA VENDAS */
+async function consultar(){
+  if(!produtoSelecionado) return;
+
+  qtd.textContent="…";
+
+  const r=await fetch(
+    `/api/vendas-produto?produtoId=${produtoSelecionado.id}&de=${de.value}&ate=${ate.value}`
+  );
+  const j=await r.json();
+
+  qtd.textContent=j.quantidadeVendida ?? 0;
+}
+
+["de","ate"].forEach(i=>document.getElementById(i).addEventListener("change",consultar));
 </script>
 
 </body>
