--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>CB SYSTEMS®</title>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#00c2b8">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -282,6 +287,16 @@ function openPage(page,el){
   document.getElementById("frame").src = page;
   document.querySelectorAll(".icon").forEach(i=>i.classList.remove("active"));
   el.classList.add("active");
+}
+</script>
+<script>
+if ("serviceWorker" in navigator) {
+  window.addEventListener("load", () => {
+    navigator.serviceWorker
+      .register("/service-worker.js")
+      .then(() => console.log("✅ PWA ativo"))
+      .catch(err => console.error("❌ Erro no SW:", err));
+  });
 }
 </script>
 
