--- a/cards/card5.html
+++ b/cards/card5.html
@@ -7,7 +7,6 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-  
 <style>
 :root{
   --primary:#14b8a6;
@@ -31,10 +30,7 @@ html,body{
   display:flex;
   flex-direction:column;
 }
-.header{
-  font-weight:800;
-  font-size:15px;
-}
+.header{font-weight:800;font-size:15px}
 
 /* BUSCA */
 .input-loading{position:relative}
@@ -55,7 +51,6 @@ html,body{
   animation:spin .8s linear infinite;
 }
 @keyframes spin{to{transform:rotate(360deg)}}
-
 .lista .item{
   background:#f1f5f9;
   padding:12px;
@@ -64,7 +59,6 @@ html,body{
   cursor:pointer;
 }
 .lista .item:hover{background:#e2e8f0}
-
 .badge{
   display:inline-block;
   margin-top:10px;
@@ -97,20 +91,11 @@ html,body{
   margin-top:18px;
   text-align:center;
 }
-.kpi span{
-  display:block;
-  font-size:13px;
-  color:var(--muted);
-}
-.kpi strong{
-  font-size:26px;
-  font-weight:800;
-}
+.kpi span{display:block;font-size:13px;color:var(--muted)}
+.kpi strong{font-size:26px;font-weight:800}
 
 /* PROGRESSO */
-.progress{
-  margin-top:12px;
-}
+.progress{margin-top:12px}
 .progress-bar{
   height:10px;
   background:#e5e7eb;
@@ -129,12 +114,7 @@ html,body{
   color:var(--muted);
   text-align:center;
 }
-
-.footer{
-  margin-top:auto;
-  font-size:12px;
-  color:var(--muted);
-}
+.footer{margin-top:auto;font-size:12px;color:var(--muted)}
 .hidden{display:none}
 </style>
 </head>
@@ -145,7 +125,6 @@ html,body{
 
   <div class="header">📊 Vendas por produto (Fiscal)</div>
 
-  <!-- PRODUTO -->
   <label>Produto</label>
   <div class="input-loading">
     <input id="buscaProduto" placeholder="Digite o nome do produto">
@@ -157,19 +136,16 @@ html,body{
   <div id="listaProduto" class="lista"></div>
   <div id="produtoBadge" class="badge hidden"></div>
 
-  <!-- PERÍODO -->
   <div class="grid">
     <input type="date" id="de">
     <input type="date" id="ate">
   </div>
 
-  <!-- KPI -->
   <div class="kpi">
     <span>Quantidade vendida no período</span>
     <strong id="qtd">—</strong>
   </div>
 
-  <!-- PROGRESSO -->
   <div class="progress">
     <div class="progress-bar">
       <div id="progressBar"></div>
@@ -197,34 +173,41 @@ const loading = document.getElementById("loadingProduto");
 const qtd = document.getElementById("qtd");
 const progressBar = document.getElementById("progressBar");
 const progressText = document.getElementById("progressText");
+const de = document.getElementById("de");
+const ate = document.getElementById("ate");
 
 const showLoading = () => loading.style.display = "flex";
 const hideLoading = () => loading.style.display = "none";
 
-/* DATAS PADRÃO: início do mês → hoje */
-(function(){
+/* DATAS PADRÃO */
+(() => {
   const hoje = new Date();
   de.value = new Date(hoje.getFullYear(), hoje.getMonth(), 1).toISOString().slice(0,10);
   ate.value = hoje.toISOString().slice(0,10);
 })();
 
-/* BUSCA PRODUTO (VF) */
+/* BUSCA PRODUTO */
 buscaProduto.oninput = () => {
   clearTimeout(debounce);
   cancelado = true;
-  produtoSelecionado = null;
+
+  listaProduto.innerHTML = "";
   badge.classList.add("hidden");
   progressBar.style.width = "0%";
   progressText.textContent = "0%";
+  qtd.textContent = "—";
 
   const termo = buscaProduto.value.trim().toLowerCase();
-  if (termo.length < 2) {
-    listaProduto.innerHTML = "";
-    return;
+
+  if (produtoSelecionado && termo !== produtoSelecionado.nome.toLowerCase()) {
+    produtoSelecionado = null;
   }
+
+  if (termo.length < 2) return;
 
   debounce = setTimeout(async () => {
     if (cache[termo]) {
+      console.log("🧠 Cache:", termo);
       renderLista(cache[termo]);
       return;
     }
@@ -234,10 +217,15 @@ buscaProduto.oninput = () => {
 
     try {
       showLoading();
+      console.log("🔍 Buscando produto:", termo);
+
       const r = await fetch(`/api/produtos-busca?q=${encodeURIComponent(termo)}`, {
         signal: controller.signal
       });
+
       const j = await r.json();
+      console.log("📦 Produtos:", j);
+
       cache[termo] = j.items || [];
       renderLista(j.items || []);
     } catch (e) {
@@ -245,7 +233,7 @@ buscaProduto.oninput = () => {
     } finally {
       hideLoading();
     }
-  }, 280);
+  }, 300);
 };
 
 function renderLista(items){
@@ -262,53 +250,76 @@ window.selecionarProduto = (id, nome) => {
   badge.textContent = `${nome} • ID ${id}`;
   badge.classList.remove("hidden");
   listaProduto.innerHTML = "";
+
+  console.log("✅ Produto selecionado:", produtoSelecionado);
   consultar();
 };
 
-/* CONSULTA PAGINADA COM % CONCLUÍDO */
+/* CONSULTA PAGINADA */
 async function consultar(){
-  if (!produtoSelecionado) return;
+  if (!produtoSelecionado) {
+    console.warn("⚠️ consultar() sem produto");
+    return;
+  }
 
   cancelado = false;
   let start = 0;
   let totalQtd = 0;
-  let totalRegistros = 0;
+  let pagina = 1;
 
   qtd.textContent = "0";
-  progressBar.style.width = "0%";
-  progressText.textContent = "0%";
+  console.group("📊 CONSULTA VENDAS");
+  console.log("Produto:", produtoSelecionado);
+  console.log("Período:", de.value, ate.value);
 
   while (true) {
-    if (cancelado) return;
+    if (cancelado) {
+      console.warn("⛔ Consulta cancelada");
+      break;
+    }
 
-    const r = await fetch(
-      `/api/vendas-produto` +
-      `?produtoId=${produtoSelecionado.id}` +
-      `&de=${de.value}` +
-      `&ate=${ate.value}` +
-      `&start=${start}`
-    );
+    const url =
+      `/api/vendas-produto?produtoId=${produtoSelecionado.id}` +
+      `&de=${de.value}&ate=${ate.value}&start=${start}`;
 
+    console.group(`📄 Página ${pagina}`);
+    console.log("➡️ URL:", url);
+
+    const r = await fetch(url);
     const j = await r.json();
 
-    totalQtd += Number(j.somaPagina || 0);
+    console.log("📦 Resposta:", j);
+
+    const soma = Number(j.somaPagina || 0);
+    totalQtd += soma;
     qtd.textContent = totalQtd.toFixed(3);
 
-    totalRegistros = j.totalRegistros || 0;
     start = j.proximoStart;
 
-    const pct = totalRegistros
-      ? Math.min(100, (start / totalRegistros) * 100)
+    console.log("➕ Soma página:", soma);
+    console.log("🔢 Total:", totalQtd);
+    console.log("📍 Próximo start:", start);
+
+    const pct = j.totalRegistros
+      ? Math.min(100, (start / j.totalRegistros) * 100)
       : 100;
 
     progressBar.style.width = pct.toFixed(1) + "%";
     progressText.textContent = pct.toFixed(1) + "%";
 
-    if (j.terminou) break;
+    console.groupEnd();
+
+    if (j.terminou) {
+      console.log("🏁 Finalizado");
+      break;
+    }
+
+    pagina++;
   }
 
   progressBar.style.width = "100%";
   progressText.textContent = "100% concluído";
+  console.groupEnd();
 }
 
 ["de","ate"].forEach(id => {
