--- a/dashboard.html
+++ b/dashboard.html
@@ -231,6 +231,9 @@ iframe{
     <div class="icon" onclick="openPage('fichatecnica.html',this)">
       <span class="glyph doc"></span>
     </div>
+        <div class="icon" onclick="openPage('ingredientes.html',this)">
+      <span class="glyph doc"></span>
+    </div>
     <div class="icon" onclick="openPage('analiseficha.html',this)">
       <span class="glyph chart"></span>
     </div>
