--- a/ingredientes.html
+++ b/ingredientes.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Cadastro de Produtos • CMV</title>
+<title>Cadastro de Ingredientes • CMV</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -12,9 +12,8 @@
 :root{
   --primary:#14b8a6;
   --primary-dark:#0f766e;
-  --card:#ffffff;
   --bg:#f1f5f9;
-  --text:#0f172a;
+  --card:#ffffff;
 }
 
 *{box-sizing:border-box}
@@ -24,28 +23,24 @@ body{
   padding:24px;
   background:var(--bg);
   font-family:Inter,sans-serif;
-  color:var(--text);
 }
 
 .container{
+  max-width:900px;
+  margin:auto;
   background:var(--card);
   border-radius:24px;
   padding:28px;
-  max-width:1100px;
-  margin:auto;
   box-shadow:0 20px 40px rgba(0,0,0,.08);
 }
 
-h1{
-  font-size:22px;
-  margin-bottom:20px;
-}
+h1{margin-bottom:20px}
 
 label{
   font-size:13px;
   font-weight:800;
-  margin-top:14px;
   display:block;
+  margin-top:14px;
 }
 
 input,select,button{
@@ -54,7 +49,6 @@ input,select,button{
   border-radius:16px;
   border:1px solid #cbd5e1;
   margin-top:6px;
-  font-family:inherit;
 }
 
 button{
@@ -63,57 +57,24 @@ button{
   font-weight:800;
   border:none;
   cursor:pointer;
-}
-
-.secondary{
-  background:#e5e7eb;
-  color:#111827;
+  margin-top:22px;
 }
 
 .grid{
   display:grid;
-  grid-template-columns:2fr 1fr 1fr 1fr auto;
+  grid-template-columns:1fr 1fr 1fr 1fr auto;
   gap:10px;
-  margin-top:12px;
+  margin-top:10px;
 }
 
 .var{
   background:#f8fafc;
-  border-radius:16px;
   padding:14px;
-  margin-top:8px;
+  border-radius:14px;
   display:flex;
   justify-content:space-between;
-  align-items:center;
-}
-
-.var span{
+  margin-top:8px;
   font-weight:700;
-}
-
-.var small{
-  color:#475569;
-}
-
-.kpis{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:14px;
-  margin-top:24px;
-}
-
-.kpi{
-  background:#f8fafc;
-  border-radius:18px;
-  padding:18px;
-  text-align:center;
-  font-weight:800;
-}
-
-.kpi span{
-  display:block;
-  margin-top:6px;
-  font-size:18px;
 }
 </style>
 </head>
@@ -121,14 +82,28 @@ button{
 <body>
 
 <div class="container">
+<h1>📦 Cadastro de Ingredientes</h1>
 
-<h1>📦 Cadastro de Produtos e Variações</h1>
-
-<label>Nome do Produto</label>
-<input id="produtoNome" placeholder="Ex: Ovo">
+<label>Nome</label>
+<input id="nome">
 
 <label>Descrição</label>
-<input id="produtoDesc" placeholder="Opcional">
+<input id="descricao">
+
+<label>Unidade de Medida</label>
+<select id="unidade">
+  <option>UN</option>
+  <option>KG</option>
+  <option>G</option>
+  <option>L</option>
+  <option>ML</option>
+</select>
+
+<label>Valor</label>
+<input id="valor" inputmode="decimal" placeholder="R$ 0,00">
+
+<label>Rendimento (%)</label>
+<input id="rendimento" inputmode="numeric" value="100">
 
 <button onclick="salvarProduto()">Salvar Produto</button>
 
@@ -137,95 +112,100 @@ button{
 <h2>➕ Variações</h2>
 
 <div class="grid">
-  <input id="varNome" placeholder="Ex: Unidade / KG">
-  <select id="varUn">
+  <select id="vUnidade">
     <option>UN</option>
     <option>KG</option>
     <option>G</option>
     <option>L</option>
     <option>ML</option>
   </select>
-  <input id="varCusto" type="number" step="0.0001" placeholder="Custo">
-  <input id="varRend" type="number" value="100" placeholder="Rendimento %">
+
+  <input id="vValor" inputmode="decimal" placeholder="R$ 0,00">
+  <input id="vRendimento" inputmode="numeric" value="100">
   <button onclick="addVariacao()">+</button>
 </div>
 
-<div id="listaVar"></div>
-
-<div class="kpis">
-  <div class="kpi">Custo Médio<span id="custoMedio">R$ 0,00</span></div>
-  <div class="kpi">Menor Custo<span id="menorCusto">R$ 0,00</span></div>
-  <div class="kpi">Maior Custo<span id="maiorCusto">R$ 0,00</span></div>
-</div>
-
+<div id="lista"></div>
 </div>
 
 <script>
 const sb = supabase.createClient(
   "https://dxkszikemntfusfyrzos.supabase.co",
-  "SUA_PUBLIC_KEY"
+  "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
 
 let produtoId = null;
 let variacoes = [];
 
-const moeda = v => "R$ " + Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
+/* ===== MÁSCARAS ===== */
+function moedaMask(el){
+  el.addEventListener("input",()=>{
+    let v = el.value.replace(/\D/g,"");
+    v = (Number(v)/100).toFixed(2);
+    el.value = "R$ " + v.replace(".",",");
+  });
+}
 
+function numero(el){
+  el.addEventListener("input",()=>{
+    el.value = el.value.replace(/\D/g,"");
+  });
+}
+
+moedaMask(valor);
+moedaMask(vValor);
+numero(rendimento);
+numero(vRendimento);
+
+/* ===== SALVAR PRODUTO ===== */
 async function salvarProduto(){
-  const nome = produtoNome.value.trim();
-  if(!nome){ alert("Informe o nome"); return; }
+  const data = {
+    nome: nome.value,
+    descricao: descricao.value,
+    unidade_medida: unidade.value,
+    valor: Number(valor.value.replace(/\D/g,""))/100,
+    rendimento_percentual: Number(rendimento.value)
+  };
 
-  const { data, error } = await sb
+  const { data:res, error } = await sb
     .from("produtos")
-    .insert({ nome, descricao: produtoDesc.value })
+    .insert(data)
     .select()
     .single();
 
   if(error){ alert(error.message); return; }
 
-  produtoId = data.id;
-  alert("Produto salvo! Agora cadastre as variações.");
+  produtoId = res.id;
+  alert("Produto salvo! Agora adicione variações.");
 }
 
-function addVariacao(){
+/* ===== VARIAÇÕES ===== */
+async function addVariacao(){
   if(!produtoId){ alert("Salve o produto primeiro"); return; }
 
-  const nome = varNome.value;
-  const un = varUn.value;
-  const custo = Number(varCusto.value);
-  const rend = Number(varRend.value) || 100;
+  const payload = {
+    produto_id: produtoId,
+    unidade_medida: vUnidade.value,
+    valor: Number(vValor.value.replace(/\D/g,""))/100,
+    rendimento_percentual: Number(vRendimento.value)
+  };
 
-  const custoReal = custo / (rend/100);
+  const { error } = await sb
+    .from("produto_variacoes")
+    .insert(payload);
 
-  variacoes.push({ nome, un, custo, rend, custoReal });
+  if(error){ alert(error.message); return; }
+
+  variacoes.push(payload);
   render();
 }
 
-async function salvarVariacoes(){
-  for(const v of variacoes){
-    await sb.from("produto_variacoes").insert({
-      produto_id: produtoId,
-      nome_variacao: v.nome,
-      unidade: v.un,
-      custo: v.custo,
-      rendimento_percentual: v.rend,
-      custo_real: v.custoReal
-    });
-  }
-}
-
 function render(){
-  listaVar.innerHTML = variacoes.map(v=>`
+  lista.innerHTML = variacoes.map(v=>`
     <div class="var">
-      <span>${v.nome} (${v.un})</span>
-      <small>${moeda(v.custoReal)}</small>
+      ${v.unidade_medida} • R$ ${v.valor.toFixed(2)} • ${v.rendimento_percentual}%
     </div>
   `).join("");
-
-  const custos = variacoes.map(v=>v.custoReal);
-  custoMedio.textContent = moeda(custos.reduce((a,b)=>a+b,0)/custos.length);
-  menorCusto.textContent = moeda(Math.min(...custos));
-  maiorCusto.textContent = moeda(Math.max(...custos));
 }
 </script>
 
